[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Francis Chua <hwymonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.20"
# web-sys = "0.3.44"
console_error_panic_hook = "0.1.6"	